Update the config for the blog post
I hope this will close the making of the first blog post

--- a/_posts/2019-08-18-Welcome.md
+++ b/_posts/2019-08-18-Welcome.md
@@ -1,1 +1,6 @@
+---
+title: "Welcome"
+date: 2019-08-18
+---
+
 This is my first porst on this blog. Will edit later of what I learn in creating this blog by following the Github Learning Lab
